[package]
name = "vulkan-map"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
log = "0.4"
cgmath = "0.18"
png = "0.17"
image = { version = "^0.24", default-features = false, features = ["png", "jpeg"] }
pretty_env_logger = "0.5"
thiserror = "1"
tobj = { version = "3", features = ["log"] }
vulkanalia = { version = "=0.33.0", features = ["libloading", "provisional", "window"] }
winit = "0.29"
tracy-client = { version = "^0.18.0", optional = true }

[features]
tracy = ["tracy-client/enable"]
